--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section class="areas">
         <div class="links">
             <a href="linkedin.com">
-                <img src="./images/linkedin.png">
+                <img src="./images/linkedin.PNG">
             </a>
             <a href="github.com">
                 <img src="./images/github.JPG">
