image path fixes final

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <section class="areas">
         <div class="links">
             <a href="linkedin.com">
-                <img src="../images/linkedin.PNG">
+                <img src="images/linkedin.png">
             </a>
             <a href="github.com">
-                <img src="../images/github.JPG">
+                <img src="images/github.jpg">
             </a>
         </div>
         <div class="header">
