sub page template almost done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="p3" href="p3.html">Video Game</a>
                 <a class="p4" href="p4.html">Text Game</a>
                 <a class="p5" href="p5.html">T-shirt Folder</a>
-                <a class="p6" href="p6.html">Resume</a>
+                <a class="p6" href="p6.html">About</a>
             </div>
         </div>
     </section>
