--- a/p1.html
+++ b/p1.html
@@ -11,7 +11,23 @@
 </header>
 <body>
     <div class="container">
-        
+        <div class="skills">
+            <h2>Skills Used</h2>
+            <ul>
+                <li>Python</li>
+                <li>Databases</li>
+                <li>Communication</li>
+                <li>Data Structures</li>
+            </ul>
+        </div>
+        <div class="description">
+            <h2>Project Description</h2>
+            <span></span>
+            <h3>Challenges</h3>
+            <span></span>
+            <h3>Crashout?</h3>
+            <span></span>
+        </div>   
     </div>
     
 </body>
