--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <section class="areas">
         <div class="links">
-            <a href="linkedin.com">
+            <a href="https://www.linkedin.com/in/ben-quackenbush-2587a12b8/">
                 <img src="images/linkedin.png">
             </a>
-            <a href="github.com">
+            <a href="https://github.com/BenQuack">
                 <img src="images/github.jpg">
             </a>
         </div>
@@ -23,14 +23,24 @@
         <div class="projects">
             <h2>work in progress or planned projects</h2>
             <div class="new">
-                <a class="wip1" href="wip1.html">Catan</a>
-                <a class="wip2" href="wip2.html">Chess</a>
-                <a class="wip3" href="wip3.html">A star</a>
+                <a class="wip1" href="wip1.html">Catan
+                    <img src="images/catan.jpg">
+                </a>
+                <a class="wip2" href="wip2.html">Chess
+                    <img src="images/chess.png">
+                </a>
+                <a class="wip3" href="wip3.html">A star
+                    <img src="images/graph.png">
+                </a>
             </div>
             <h2>completed projects</h2>
             <div class="old">
-                <a class="p1" href="p1.html">Cereal App</a>
-                <a class="p2" href="p2.html">Query App</a>
+                <a class="p1" href="p1.html">Cereal App
+                    <img src="images/cereal.png">
+                </a>
+                <a class="p2" href="p2.html">Query App
+                    <img src="images/query.jpg">
+                </a>
                 <a class="p3" href="p3.html">Video Game</a>
                 <a class="p4" href="p4.html">Text Game</a>
                 <a class="p5" href="p5.html">T-shirt Folder</a>
