--- a/p1.html
+++ b/p1.html
@@ -22,11 +22,19 @@
         </div>
         <div class="description">
             <h2>Project Description</h2>
-            <span></span>
+            <span>
+                Created an amazon firebase to store a simple set of data.
+                Then used python and the pyparsing package to create a command line
+                interface. The parser could parse complex queries using 'and' as the keyword.
+                I did design a query formatting function that was able to handle nested queries
+                but that was out of the projects scope so it did not get fully implemented into the system
+            </span>
             <h3>Challenges</h3>
-            <span></span>
-            <h3>Crashout?</h3>
-            <span></span>
+            <span>
+                Some of the communication and issue tracking was lacking. That caused delays and I
+                designed a function that was way overengineered for the project requirements. Some
+                members of the group had simple formatting errors that were not noticed till the end.
+            </span>
         </div>   
     </div>
     
