--- a/p2.html
+++ b/p2.html
@@ -15,17 +15,25 @@
             <h2>Skills Used</h2>
             <ul>
                 <li>Python</li>
-                <li>Databases</li>
-                <li>Communication</li>
-                <li>Data Structures</li>
+                <li>Sqlite3</li>
             </ul>
         </div>
         <div class="description">
             <h2>Project Description</h2>
-            <span></span>
+            <span>
+                I created a project similar to the Cereal app but not in a group setting
+                and using a regular squlite3 database instead of the amazon firebase. I used
+                ChatGPT to generate sample data and then created a command line query app
+                that allowed users to see cross sections of libaries from different streaming services.
+                each service was represented by their own table in the data base.
+            </span>
             <h3>Challenges</h3>
-            <span></span>
-            <h3>Crashout?</h3>
+            <span>
+                The debugging for this project was tedious becuase to 
+                run an SQL query from python you need to create the query string.
+                This meant that you had to find what decsion tree caused the error,
+                if that error could happen on multiple cases or just one, and then 
+                restructure the code.
             <span></span>
         </div>   
     </div>
