--- a/p3.html
+++ b/p3.html
@@ -14,19 +14,26 @@
         <div class="skills">
             <h2>Skills Used</h2>
             <ul>
-                <li>Python</li>
-                <li>Databases</li>
-                <li>Communication</li>
-                <li>Data Structures</li>
+                <li>C++</li>
+                <li>SFML</li>
+                <li>Vector Calculus</li>
             </ul>
         </div>
         <div class="description">
             <h2>Project Description</h2>
-            <span></span>
+            <span>
+                For this project I created a simple video game using the SFML library. The gameplay
+                was just moving around a square to doge enemies/obstacles. 
+                The enemies were a circle that bounced around off the walls with a small amount 
+                of randomization and player tracking added to the bouce calculations after a random
+                amount of time the enemies would attack by staying still and 'impacting' the ground.
+                you lost the game if you were hit by an enemy.
+            </span>
             <h3>Challenges</h3>
-            <span></span>
-            <h3>Crashout?</h3>
-            <span></span>
+            <span>
+                This was my first time working with vectors to do player movemnet and at first 
+                I wanted something more complex but doing player movemnet even now is difficult.
+            </span>
         </div>   
     </div>
     
