--- a/p4.html
+++ b/p4.html
@@ -14,19 +14,29 @@
         <div class="skills">
             <h2>Skills Used</h2>
             <ul>
-                <li>Python</li>
-                <li>Databases</li>
-                <li>Communication</li>
-                <li>Data Structures</li>
+                <li>C++</li>
             </ul>
         </div>
         <div class="description">
             <h2>Project Description</h2>
-            <span></span>
+            <span>
+                This project was an extension of another project I did in this class.
+                The first project was a hardcoded set of levels that could be played through a 
+                command line interface. This project was a continuation of that project by adding in a 
+                syntax for a text file that can convert the text file into a level for the game. 
+                The syntax is not the easiest but not too bad it uses nested characters to represent 
+                sub areas in each level with you being able to add items and messages for the player to find.
+            </span>
             <h3>Challenges</h3>
-            <span></span>
-            <h3>Crashout?</h3>
-            <span></span>
+            <span>
+                I made this during my sophomore year and did not know how to use trees and other data 
+                structures to help make the parsing easier.
+            </span>
+            <h3>Expansion</h3>
+            <span>
+                I would like to switch this project into python and then polish up the syntax 
+                and add in some database functionality to store save data so that you can load a game.
+            </span>
         </div>   
     </div>
     
