--- a/p5.html
+++ b/p5.html
@@ -15,18 +15,35 @@
             <h2>Skills Used</h2>
             <ul>
                 <li>Python</li>
-                <li>Databases</li>
-                <li>Communication</li>
-                <li>Data Structures</li>
+                <li>Computer Organization</li>
+                <li>Raspberry PI</li>
+                <li>Bread board</li>
             </ul>
         </div>
         <div class="description">
             <h2>Project Description</h2>
-            <span></span>
+            <span>
+                I created a T-Shirt folding machine with some cardboard, a bread board,
+                and a few servos. The servos were controlled by a python script ran on a Raspberry PI that would 
+                just activate them in groups of two(two servos for each paddle).
+            </span>
             <h3>Challenges</h3>
-            <span></span>
+            <span>
+                I had never done any work with electronics before so I had to learn what
+                parts I would need how they interface with the Raspberry PI and which python 
+                libraries would work the best for the servos I bought. I also had to buy 
+                a different set of servos becuase I did not understand power requirements and weight limits
+                for servos.
+            </span>
             <h3>Crashout?</h3>
-            <span></span>
+            <span>
+                Yes the first on was when trying to get the servos working. I tried multiple
+                libraries to control them but there was alwasy something that was not quite right or even very 
+                wrong. An example of that is the first generic library I found would create these ghost pulses
+                that would make the servos twitch when the others ran. The second crashout was when right
+                before I presented this project I managed to run a 9v battery right into the Raspberry PI this 
+                suprising no one completely fried the board.
+            </span>
         </div>   
     </div>
     
