links and repos added

--- a/p3.html
+++ b/p3.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="subStyle.css">
 </head>
 <header>
-    <h1>Header</h1>
-    <a href="github.com">
-        <img src="/images/github.jpg">
+    <h1>SFML Video Game</h1>
+    <a href="https://github.com/uvmcs2300s2024/M4OEP-bquacken">
+        <img src="images/github.jpg">
     </a>
 </header>
 <body>
