--- a/p6.html
+++ b/p6.html
@@ -3,9 +3,9 @@
     <link rel="stylesheet" href="subStyle.css">
 </head>
 <header>
-    <h1>Header</h1>
-    <a href="github.com">
-        <img src="/images/github.jpg">
+    <h1>My Resume</h1>
+    <a href="https://github.com/BenQuack">
+        <img src="images/github.jpg">
     </a>
 </header>
 <body>
