--- a/p1.html
+++ b/p1.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="subStyle.css">
 </head>
 <header>
-    <h1>Header</h1>
-    <a href="github.com">
-        <img src="/images/github.jpg">
+    <h1>Cereal Query App</h1>
+    <a href="https://github.com/heidelbergah/CS3050-warmup">
+        <img src="images/github.jpg">
     </a>
 </header>
 <body>
