--- a/p4.html
+++ b/p4.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="subStyle.css">
 </head>
 <header>
-    <h1>Header</h1>
-    <a href="github.com">
-        <img src="/images/github.jpg">
+    <h1>Text Based Game Level Maker</h1>
+    <a href="https://github.com/uvmcs2300s2024/M1OEP-txt-game-bquacken">
+        <img src="images/github.jpg">
     </a>
 </header>
 <body>
