colors and qol fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <img src="images/linkedin.png">
             </a>
             <a href="https://github.com/BenQuack">
-                <img src="images/github.jpg">
+                <img src="images/github.png">
             </a>
         </div>
         <div class="header">
@@ -23,22 +23,22 @@
         <div class="projects">
             <h2>work in progress or planned projects</h2>
             <div class="new">
-                <a class="wip1" href="wip1.html">Catan
+                <a class="wip1" href="wip1.html">
                     <img src="images/catan.jpg">
                 </a>
-                <a class="wip2" href="wip2.html">Chess
+                <a class="wip2" href="wip2.html">
                     <img src="images/chess.png">
                 </a>
-                <a class="wip3" href="wip3.html">A star
+                <a class="wip3" href="wip3.html">
                     <img src="images/graph.png">
                 </a>
             </div>
             <h2>completed projects</h2>
             <div class="old">
-                <a class="p1" href="p1.html">Cereal App
+                <a class="p1" href="p1.html">
                     <img src="images/cereal.png">
                 </a>
-                <a class="p2" href="p2.html">Query App
+                <a class="p2" href="p2.html">
                     <img src="images/query.jpg">
                 </a>
                 <a class="p3" href="p3.html">Video Game</a>
