--- a/p5.html
+++ b/p5.html
@@ -5,9 +5,14 @@
 </head>
 <header>
     <h1>T-Shirt Folder</h1>
-    <a href="https://github.com/BenQuack">
-        <img src="images/github.jpg">
-    </a>
+    <div class="links">
+        <a href="index.html" id="home">
+            <img src="images/home.png">
+        </a>
+        <a href="https://github.com/BenQuack">
+            <img src="images/github.png">
+        </a>
+    </div>
 </header>
 <body>
     <div class="container">
