--- a/p2.html
+++ b/p2.html
@@ -5,9 +5,14 @@
 </head>
 <header>
     <h1>Streaming Query App</h1>
-    <a href="https://github.com/BenQuack/Streaming-Query-App">
-        <img src="images/github.jpg">
-    </a>
+    <div class="links">
+        <a href="index.html" id="home">
+            <img src="images/home.png">
+        </a>
+        <a href="https://github.com/BenQuack/Streaming-Query-App">
+            <img src="images/github.png">
+        </a>
+    </div>
 </header>
 <body>
     <div class="container">
