--- a/p3.html
+++ b/p3.html
@@ -5,9 +5,14 @@
 </head>
 <header>
     <h1>SFML Video Game</h1>
-    <a href="https://github.com/uvmcs2300s2024/M4OEP-bquacken">
-        <img src="images/github.jpg">
-    </a>
+    <div class="links">
+        <a href="index.html" id="home">
+            <img src="images/home.png">
+        </a>
+        <a href="https://github.com/uvmcs2300s2024/M4OEP-bquacken">
+            <img src="images/github.png">
+        </a>
+    </div>
 </header>
 <body>
     <div class="container">
