--- a/p6.html
+++ b/p6.html
@@ -4,9 +4,14 @@
 </head>
 <header>
     <h1>My Resume</h1>
-    <a href="https://github.com/BenQuack">
-        <img src="images/github.jpg">
-    </a>
+    <div class="links">
+        <a href="index.html" id="home">
+            <img src="images/home.png">
+        </a>
+        <a href="https://github.com/BenQuack">
+            <img src="images/github.png">
+        </a>
+    </div>
 </header>
 <body>
     <iframe src="images/BenQuackenbushResume.pdf" width="100%" height="1000rem"></iframe>
