media query fine tuning

--- a/p6.html
+++ b/p6.html
@@ -11,6 +11,9 @@
         <a href="https://github.com/BenQuack">
             <img src="images/github.png">
         </a>
+        <audio controls>
+            <source src="audio/jazz.mp3" type="audio/mpeg">
+        </audio>
     </div>
 </header>
 <body>
